chore: more properties translated

--- a/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
+++ b/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
@@ -34,7 +34,7 @@ ERROR_context_creator_parse_configuration         = Unexpected error when parsin
 context.creator.reading_configuration             = Reading configuration
 context.creator.report.project-version            = Project version set to {}
 context.creator.report.release                    = Release is{}snapshot
-context.creator.report.timestamp                  = Timestamp is {}
+context.creator.report.timestamp                  = Timestamp je {}
 context.creator.report.head                       = HEAD is at {}
 context.creator.report.platform                   = Platform is {}
 context.configurer.auto-config.on                 = Auto configure is ON
@@ -182,7 +182,7 @@ packager.skipped.template               = skipping template {} for {}/{}
 packager.evaluate.template              = evaluating template {} for {}/{}
 packager.write.template                 = writing template {} for {}/{}
 packager.write.file                     = writing file {} for {}/{}
-packager.copy.license                   = copying license files
+packager.copy.license                   = kopiruju sa license subory
 
 ERROR_brew_multiplatform_artifacts       = There are no matching multi-platform binaries
 ERROR_packager_requires_platform         = must run on {}
@@ -471,8 +471,8 @@ ERROR_unexpected_repository_update   = Unexpected error updating {}
 repository.copy.files                = copying files from {}
 ERROR_repository_copy_files          = Could not copy files from {}
 
-uploader.uploading.to          = uploading to {}
-downloader.unpack              = unpacking {}
+uploader.uploading.to          = nahrava sa na {}
+downloader.unpack              = rozbaluje sa {}
 ERROR_login                    = Invalid credentials
 ERROR_disconnect               = Unexpected error when disconnecting from {}
 ERROR_ssh_mkdir                = Unexpected error when creating path {}
@@ -491,10 +491,10 @@ changelog.generator.lookup.tag          = looking for tag that matches '{}'
 changelog.generator.lookup.previous.tag = looking for previous tag '{}'
 changelog.generator.lookup.matching.tag = looking for tags that match '{}', excluding '{}'
 changelog.generator.lookup.before.tag   = looking for a tag before '{}' that matches '{}'
-changelog.generator.tag.found           = found tag {}
-changelog.generator.generate            = Generating changelog: {}
-changelog.generator.read                = Reading changelog from {}
-ERROR_changelog_not_exist               = Changelog {} does not exist
+changelog.generator.tag.found           = najdeny tag {}
+changelog.generator.generate            = Generuje sa changelog: {}
+changelog.generator.read                = Cita sa changelog z {}
+ERROR_changelog_not_exist               = Changelog {} neexistuje
 ERROR_git_repository_remote             = repository doesn't have a remote named '{}'
 ERROR_git_repository_remote_missing_url = {} remote does not have a configured URL
 ERROR_git_repository_remote_url_parse   = Unparseable remote URL {}
@@ -528,18 +528,18 @@ git.list.assets.github                  = fetching all assets on {}/{} and relea
 git.fetch.release.by.tag                = fetching release on {}/{} with tag {}
 git.fetch.release.on.tag                = fetching release on {} with tag {}
 git.delete.tag.from                     = deleting tag {} from {}/{}
-git.delete.tag.from.repository          = deleting tag {} from {}
-git.delete.release.from                 = deleting release {} from {}/{}
-git.delete.release.from.id              = deleting release {} from {}/{} ({})
+git.delete.tag.from.repository          = vymazuje sa tag {} z {}
+git.delete.release.from                 = vymazuje sa release {} z {}/{}
+git.delete.release.from.id              = vymazuje sa release {} z {}/{} ({})
 git.create.release                      = creating release on {}/{} with tag {}
 git.create.release.repository           = creating release on {} with tag {}
 git.update.release                      = updating release on {}/{} with tag {}
 git.upload.assets                       = uploading assets to {}/{}
-git.upload.asset                        = - uploading {}
+git.upload.asset                        = - nahrava sa {}
 git.upload.asset.failure                = x failed to upload {}
-git.delete.asset                        = - deleting {}
+git.delete.asset                        = - vymazuje sa {}
 git.delete.asset.failure                = x failed to delete {}
-git.update.asset                        = - updating {}
+git.update.asset                        = - aktualizuje sa {}
 git.update.asset.failure                = x failed to update {}
 git.upload.asset.links                  = linking assets to {}/{} with tag {}
 git.upload.asset.link                   = - linking {}
@@ -549,18 +549,18 @@ ERROR_git_organization_not_exist        = Organization {} does not exist
 ERROR_git_team_not_exist                = Team {} does not exist
 git.releaser.releasing                  = Releasing to {}
 git.releaser.release.lookup             = looking up release with tag {} at repository {}
-git.releaser.release.exists             = release {} exists
-git.releaser.release.delete             = deleting release {}
-git.releaser.release.create             = creating release {}
-git.releaser.release.update             = updating release {}
-git.releaser.release.update.title       = updating release title to {}
-git.releaser.release.update.body        = updating release body
-git.releaser.release.not.found          = release {} does not exist
+git.releaser.release.exists             = release {} existuje
+git.releaser.release.delete             = vymazuje sa release {}
+git.releaser.release.create             = vytvara sa release {}
+git.releaser.release.update             = aktualizuje sa release {}
+git.releaser.release.update.title       = aktualizuje sa release title to {}
+git.releaser.release.update.body        = aktualizuje sa release body
+git.releaser.release.not.found          = release {} neexistuje
 git.releaser.user.not.found             = Could not find user matching {}
 git.releaser.repository.tag             = tagging local repository with {}
 github.generate.release.notes           = Generating release notes on {}/{} for {}..{}
-ERROR_git_repository_not_exists         = Repository '{}' does not exist
-ERROR_git_tag_not_exists                = Tag '{}' does not exist
+ERROR_git_repository_not_exists         = Repository '{}' neexistuje
+ERROR_git_tag_not_exists                = Tag '{}' neexistuje
 ERROR_git_release_branch_not_exists     = Unrecognized branch '{}'. Available branches are: {}
 ERROR_git_releaser_cannot_release       = {} release failed because release {} already exists. overwrite = false; update = false
 git.releaser.link.discussion            = linking release {} with discussion {}
@@ -568,26 +568,26 @@ git.releaser.link.discussion.error      = Could not update release {} with discu
 ERROR_git_discussion_duplicate          = A discussion titled "{}" has already been posted to {}/{}
 warn_ssl_disabled                       = ** SSL VALIDATION IS DISABLED. CONTINUE AT YOUR OWN RISK **
 warn_ssh_disabled                       = ** SSH HOST VERIFICATION IS DISABLED. CONTINUE AT YOUR OWN RISK **
-webhook.connection.open                 = opening connection
-webhook.connection.configure            = configuring connection
+webhook.connection.open                 = otvara sa pripojenie
+webhook.connection.configure            = konfiguruje sa pripojenie
 webhook.message.send                    = sending message
-webhook.data.send                       = sending data
-webhook.response.handle                 = handling response
-sdk.operation.failed                    = {} operation failed
+webhook.data.send                       = odosielaju sa data
+webhook.response.handle                 = spracuvava sa response
+sdk.operation.failed                    = {} operacia zlyhala
 sdkman.release.announce                 = announcing {} release of '{}' candidate
 ERROR_sdkman_announce                   = Failed to announce some candidates
 sdkman.no.suitable.artifacts            = No suitable artifacts were found. Skipping
 sdkman.release.announce.major           = Announcing major release of '{}' candidate
 sdkman.release.announce.minor           = Announcing minor release of '{}' candidate
-twitter.tweet                           = tweeting: {}
+twitter.tweet                           = posielam tweet: {}
 twitter.tweet.size                      = status is {} chars long
 ERROR_unexpected_json_format            = Unexpected error formatting message as JSON
-mail.message.send                       = Sending e-mail announcement
-s3.bucket.check                         = checking if bucket {} exists
-s3.bucket.create                        = creating bucket {}
+mail.message.send                       = Odosiela sa e-mail announcement
+s3.bucket.check                         = kontroluje sa ci bucket {} existuje
+s3.bucket.create                        = vytvara sa bucket {}
 s3.object.check                         = checking if s3://{}/{} exists
-s3.object.create                        = creating s3://{}/{}
-s3.object.write                         = writing s3://{}/{}
+s3.object.create                        = vytvara sa s3://{}/{}
+s3.object.write                         = zapisuje sa s3://{}/{}
 s3.object.acl                           = adding READ permission to s3://{}/{}
 ERROR_unexpected_s3_client_config       = Error while building AWS S3 client
 
