--- a/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
+++ b/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
@@ -30,26 +30,26 @@ not = nie
 ERROR_unexpected_error = Neocakavana chyba
 ERROR_unsupported_platform_override = Nepodporovana platforma '{}', using '{}' instead
 
-ERROR_context_creator_parse_configuration         = Unexpected error when parsing configuration from {}
-context.creator.reading_configuration             = Reading configuration
-context.creator.report.project-version            = Project version set to {}
+ERROR_context_creator_parse_configuration         = Neocakavana chyba pri parsovani konfiguracie z {}
+context.creator.reading_configuration             = Citanie konfiguracie
+context.creator.report.project-version            = Verzia projektu nastavena na {}
 context.creator.report.release                    = Release is{}snapshot
 context.creator.report.timestamp                  = Timestamp je {}
-context.creator.report.head                       = HEAD is at {}
-context.creator.report.platform                   = Platform is {}
-context.configurer.auto-config.on                 = Auto configure is ON
+context.creator.report.head                       = HEAD je v {}
+context.creator.report.platform                   = Platform je {}
+context.configurer.auto-config.on                 = Automaticka konfiguracia je ZAPNUTA (ON)
 # do not translate basedir
 context.configurer.basedir.set                    = - basedir set to {}
-ERROR_context_configurer_unsupported_url          = Auto configuration does not support {}
+ERROR_context_configurer_unsupported_url          = Automaticka konfiguracia nepodporuje {}
 # do not translate release.updateSections, release.update
 ERROR_context_configurer_update_not_set           = release.updateSections is set but release.update is false
-ERROR_context_configurer_fail_git_head            = Could not determine git HEAD
-ERROR_context_configurer_fail_git_remote          = Could not determine remote
-ERROR_context_configurer_jreleaser_misconfigured  = JReleaser has not been properly configured.
-ERROR_context_configurer_detected_git             = Auto configure detected {} but project has {} configured
-ERROR_context_configurer_detected_git_owner       = Auto configure detected '{}' as repository owner but project has '{}' configured
-ERROR_context_configurer_detected_git_name        = Auto configure detected '{}' as repository name but project has '{}' configured
-ERROR_context_configurer_detected_git_branch      = Auto configure detected '{}' as default branch but project has '{}' configured
+ERROR_context_configurer_fail_git_head            = Nepodarilo sa urcit git HEAD
+ERROR_context_configurer_fail_git_remote          = Nepodarilo sa urcit remote
+ERROR_context_configurer_jreleaser_misconfigured  = JReleaser nebol spravne nakonfigurovany.
+ERROR_context_configurer_detected_git             = Bola zistena automaticka konfiguracia {} ale projekt ma {} nakonfigurovany
+ERROR_context_configurer_detected_git_owner       = Bola zistena automaticka konfiguracia '{}' ako vlastnik repository ale projekt ma '{}' nakonfigurovany
+ERROR_context_configurer_detected_git_name        = Bola zistena automaticka konfiguracia '{}' ako meno repository ale projekt ma '{}' nakonfigurovany
+ERROR_context_configurer_detected_git_branch      = Bola zistena automaticka konfiguracia '{}' ako default branch ale projekt ma '{}' nakonfigurovany
 ERROR_version_parse                               = Cannot parse version '{}'
 ERROR_version_parse_with                          = Cannot parse version '{}' with '{}'
 ERROR_unsupported_algorithm                       = Unsupported algorithm {}
@@ -499,7 +499,7 @@ ERROR_git_repository_remote             = repository doesn't have a remote named
 ERROR_git_repository_remote_missing_url = {} remote does not have a configured URL
 ERROR_git_repository_remote_url_parse   = Unparseable remote URL {}
 # do not translate origin
-ERROR_git_repository_origin_remote      = Could not determine 'origin' remote
+ERROR_git_repository_origin_remote      = Nepodarilo sa urcite 'origin' remote
 ERROR_git_repository_list_local_branch  = Could not list local branches
 ERROR_git_delete_tag                    = Could not delete tag {}
 ERROR_git_find_tag                      = Could not find tag {}
@@ -561,7 +561,7 @@ git.releaser.repository.tag             = tagging local repository with {}
 github.generate.release.notes           = Generating release notes on {}/{} for {}..{}
 ERROR_git_repository_not_exists         = Repository '{}' neexistuje
 ERROR_git_tag_not_exists                = Tag '{}' neexistuje
-ERROR_git_release_branch_not_exists     = Unrecognized branch '{}'. Available branches are: {}
+ERROR_git_release_branch_not_exists     = Nerozpoznana branch '{}'. Dostupne branche su: {}
 ERROR_git_releaser_cannot_release       = {} release failed because release {} already exists. overwrite = false; update = false
 git.releaser.link.discussion            = linking release {} with discussion {}
 git.releaser.link.discussion.error      = Could not update release {} with discussion category {}
@@ -588,12 +588,12 @@ s3.bucket.create                        = vytvara sa bucket {}
 s3.object.check                         = checking if s3://{}/{} exists
 s3.object.create                        = vytvara sa s3://{}/{}
 s3.object.write                         = zapisuje sa s3://{}/{}
-s3.object.acl                           = adding READ permission to s3://{}/{}
-ERROR_unexpected_s3_client_config       = Error while building AWS S3 client
+s3.object.acl                           = pridava sa READ permission do s3://{}/{}
+ERROR_unexpected_s3_client_config       = Chyba pri buildovani AWS S3 clienta
 
-disco.fetch.packages                    = fetching packages with {}
-disco.fetch.package                     = fetching package {}
+disco.fetch.packages                    = dotahuju sa balicky s {}
+disco.fetch.package                     = dotahuju sa balicky {}
 disco.multiple.packages                 = Disco returned {} package(s)
-disco.package.not.downloadable          = {} can not be downloaded directly
+disco.package.not.downloadable          = {} nieje mozne stiahnut priamo
 ERROR_disco_resolve_package             = Disco returned no results: {}
 ERROR_disco_resolve_pkg                 = Disco returned no result for ephemeralId {}
