chore: translated more properties

--- a/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
+++ b/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
@@ -28,12 +28,12 @@ no  = nie
 not = nie
 
 ERROR_unexpected_error = Neocakavana chyba
-ERROR_unsupported_platform_override = Nepodporovana platforma '{}', using '{}' instead
+ERROR_unsupported_platform_override = Nepodporovana platforma '{}', pouziva sa '{}' namiesto
 
 ERROR_context_creator_parse_configuration         = Neocakavana chyba pri parsovani konfiguracie z {}
 context.creator.reading_configuration             = Citanie konfiguracie
 context.creator.report.project-version            = Verzia projektu nastavena na {}
-context.creator.report.release                    = Release is{}snapshot
+context.creator.report.release                    = Release je{}snapshot
 context.creator.report.timestamp                  = Timestamp je {}
 context.creator.report.head                       = HEAD je v {}
 context.creator.report.platform                   = Platform je {}
@@ -62,7 +62,7 @@ ERROR_calver_minor_duplicate                      = Format defines two MINOR tok
 ERROR_calver_micro_minor                          = Format defines MINOR token after MICRO: '{}'
 
 ERROR_command_hook_unexpected_error = Unexpected error executing command hook
-ERROR_command_hook_parser_error     = Command line parse error: {}
+ERROR_command_hook_parser_error     = Chyba pri parsovani command line: {}
 ERROR_unbalanced_quotes             = Unbalanced quotes in {}
 hooks.execution                     = Executing {} hook(s): {} in total
 
@@ -72,7 +72,7 @@ announcers.not.configured        = No announcers have been configured. Skipping
 announcers.announcer.not.found   = Announcer {} not found. Skipping
 announcers.announcer.not.enabled = Announcer {} is not enabled. Skipping
 announcers.announcer.excluded    = Announcer {} was excluded. Skipping
-announcers.announcer.disabled    = disabled. Skipping
+announcers.announcer.disabled    = nepodporovane. Preskakuje sa
 ERROR_unsupported_announcer      = Unsupported announcer {}
 ERROR_announcer_not_configured   = Announcer {} has not been configured
 
@@ -88,8 +88,8 @@ assemblers.distribution.assemble           = assembling {} distribution
 assemblers.assembler.excluded              = Assembler {}:{} was excluded. Skipping
 ERROR_unsupported_assembler                = Unsupported assembler {}
 
-ERROR_unexpected_error_changelog = Unexpected error when creating changelog
-ERROR_cannot_read_changelog      = Can not read changelog from {}
+ERROR_unexpected_error_changelog = Neocakavana chyba pri vytvarani changelogu
+ERROR_cannot_read_changelog      = Nemozno citat changelog z {}
 
 checksum.header                           = Calculating checksums
 checksum.not.enabled                      = No files configured for checksum. Skipping
@@ -123,8 +123,8 @@ ERROR_unsupported_packager                 = Unsupported packager {}
 
 ERROR_releaser_no_match = No suitable git releaser has been configured
 
-signing.header                       = Signing files
-signing.not.enabled                  = Signing is not enabled. Skipping
+signing.header                       = Signing suborov
+signing.not.enabled                  = Signing nieje povoleny. Preskakuje sa
 signing.no.match                     = No files configured for signing. Skipping
 signing.up.to.date                   = All signatures are up-to-date and valid. Skipping
 signing.verify.signatures            = verifying {} signatures
@@ -153,7 +153,7 @@ uploaders.uploader.excluded         = Uploader {}:{} was excluded. Skipping
 uploaders.uploader.disabled         = Uploader {}:{} is not enabled. Skipping
 ERROR_unsupported_uploader          = Unsupported uploader {}
 
-downloaders.not.enabled                 = Downloading is not enabled. Skipping
+downloaders.not.enabled                 = Stahovanie nie je povolene. Preskakuje sa
 downloaders.no.match                    = No downloaders match {}
 downloaders.downloader.not.configured   = Downloader {}/{} is not configured
 downloaders.downloader.not.configured2  = Downloader {} is not configured
@@ -273,18 +273,18 @@ validation_artifactory_disabled_repositories = {} has no active repositories
 validation_artifactory_no_repositories   = {} has not defined any repositories
 validation_must_define_pattern           = {} must define a pattern
 validation_version_format_missing        = {} must define a format such as {}:<format>
-validation_must_not_be_blank             = {} must not be blank
-validation_must_not_be_null              = {} must not be null
-validation_is_null                       = {} is null
-validation_is_empty                      = {} is empty
-validation_is_missing                    = {} is missing
-validation_are_missing                   = {} are missing
-validation_directory_not_exist           = {} does not exist: {}
-validation_is_not_a_directory            = {} is not a directory: {}
-validation_directory_is_empty            = {} is empty: {}
-validation_must_not_be_empty             = {} must not be empty
-validation_value_cannot_be               = {} can not be {}
-validation_stereotype_invalid            = {} can not be {}. It must be one of {}
+validation_must_not_be_blank             = {} nemoze byt blank
+validation_must_not_be_null              = {} nemoze byt null
+validation_is_null                       = {} je null
+validation_is_empty                      = {} je empty
+validation_is_missing                    = {} je chybajuce
+validation_are_missing                   = {} su chybajuce
+validation_directory_not_exist           = {} neexisuje: {}
+validation_is_not_a_directory            = {} nie je directory: {}
+validation_directory_is_empty            = {} je empty: {}
+validation_must_not_be_empty             = {} nemoze byt empty
+validation_value_cannot_be               = {} nemoze byt {}
+validation_stereotype_invalid            = {} nemoze byt {}. It must be one of {}
 validation_multiple_assemblers           = {} has more than 1 assembler: {}
 validation_chocolatey_package_version    = Invalid chocolatey package version {}. Follow SemVer with optional .number or .yyyyMMdd as tag
 validation_brew_multiple_artifact        = {} has more than one {} artifact
@@ -370,8 +370,8 @@ default.release.message  = 🚀 {{projectNameCapitalized}} {{projectVersion}} ha
 default.category.feature = 🚀 Features
 default.category.bug.fix = 🐛 Bug Fixes
 
-ERROR_path_does_not_exist               = Path does not exist {}
-ERROR_unexpected_error_reading_template = Unexpected error reading template {}
+ERROR_path_does_not_exist               = Path neexisujte {}
+ERROR_unexpected_error_reading_template = Neocakavana chyba pri citani template {}
 ERROR_packager_name_not_blank           = Packager name must not be blank
 ERROR_packager_not_configured           = Packager {} has not been configured
 ERROR_packager_not_supported            = Packager {} is not supported
