chore: more translations

--- a/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
+++ b/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
@@ -39,10 +39,10 @@ context.creator.report.head                       = HEAD je v {}
 context.creator.report.platform                   = Platform je {}
 context.configurer.auto-config.on                 = Automaticka konfiguracia je ZAPNUTA (ON)
 # do not translate basedir
-context.configurer.basedir.set                    = - basedir set to {}
+context.configurer.basedir.set                    = - basedir nastavena na {}
 ERROR_context_configurer_unsupported_url          = Automaticka konfiguracia nepodporuje {}
 # do not translate release.updateSections, release.update
-ERROR_context_configurer_update_not_set           = release.updateSections is set but release.update is false
+ERROR_context_configurer_update_not_set           = release.updateSections je nastavena ale release.update je false
 ERROR_context_configurer_fail_git_head            = Nepodarilo sa urcit git HEAD
 ERROR_context_configurer_fail_git_remote          = Nepodarilo sa urcit remote
 ERROR_context_configurer_jreleaser_misconfigured  = JReleaser nebol spravne nakonfigurovany.
@@ -50,10 +50,10 @@ ERROR_context_configurer_detected_git             = Bola zistena automaticka kon
 ERROR_context_configurer_detected_git_owner       = Bola zistena automaticka konfiguracia '{}' ako vlastnik repository ale projekt ma '{}' nakonfigurovany
 ERROR_context_configurer_detected_git_name        = Bola zistena automaticka konfiguracia '{}' ako meno repository ale projekt ma '{}' nakonfigurovany
 ERROR_context_configurer_detected_git_branch      = Bola zistena automaticka konfiguracia '{}' ako default branch ale projekt ma '{}' nakonfigurovany
-ERROR_version_parse                               = Cannot parse version '{}'
-ERROR_version_parse_with                          = Cannot parse version '{}' with '{}'
-ERROR_unsupported_algorithm                       = Unsupported algorithm {}
-ERROR_calver_year                                 = Format does not start with a YYYY/YY/0Y token: '{}'
+ERROR_version_parse                               = Nemozno parsovat verziu '{}'
+ERROR_version_parse_with                          = Nemozno parsovat verziu '{}' s '{}'
+ERROR_unsupported_algorithm                       = Nepodporovany algoritmus {}
+ERROR_calver_year                                 = Format nezacina ako YYYY/YY/0Y token: '{}'
 ERROR_calver_month                                = Format defines a MM/0M token thus it cannot have a WW/0W token: '{}'
 ERROR_calver_week_month                           = Format defines a WW/0W token thus it cannot have a MM/0M token: '{}'
 ERROR_calver_week_day                             = Format defines a WW/0W token thus it cannot have a DD/0D token: '{}'
@@ -61,7 +61,7 @@ ERROR_calver_micro_duplicate                      = Format defines two MICRO tok
 ERROR_calver_minor_duplicate                      = Format defines two MINOR tokens: '{}'
 ERROR_calver_micro_minor                          = Format defines MINOR token after MICRO: '{}'
 
-ERROR_command_hook_unexpected_error = Unexpected error executing command hook
+ERROR_command_hook_unexpected_error = Neocakavana chyba executing command hook
 ERROR_command_hook_parser_error     = Chyba pri parsovani command line: {}
 ERROR_unbalanced_quotes             = Unbalanced quotes in {}
 hooks.execution                     = Executing {} hook(s): {} in total
@@ -105,7 +105,7 @@ ERROR_unexpected_error_calculate_checksum = Unexpected error calculating checksu
 packagers.packager.excluded                = packager {} was excluded. Skipping
 distributions.distribution.excluded        = distribution {} was excluded. Skipping
 distributions.not.enabled                  = No active distributions for {}. Skipping
-distributions.no.match                     = Distribution {} does not exist
+distributions.no.match                     = Distribution {} neexistuje
 distributions.apply.action                 = {} distributions
 distributions.apply.action.to              = - {} {} distribution
 distributions.skip.distribution            = skipping for {} distribution
