chore: more translations of Messages_sk.properties

--- a/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
+++ b/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
@@ -54,17 +54,17 @@ ERROR_version_parse                               = Nemozno parsovat verziu '{}'
 ERROR_version_parse_with                          = Nemozno parsovat verziu '{}' s '{}'
 ERROR_unsupported_algorithm                       = Nepodporovany algoritmus {}
 ERROR_calver_year                                 = Format nezacina ako YYYY/YY/0Y token: '{}'
-ERROR_calver_month                                = Format defines a MM/0M token thus it cannot have a WW/0W token: '{}'
-ERROR_calver_week_month                           = Format defines a WW/0W token thus it cannot have a MM/0M token: '{}'
-ERROR_calver_week_day                             = Format defines a WW/0W token thus it cannot have a DD/0D token: '{}'
-ERROR_calver_micro_duplicate                      = Format defines two MICRO tokens: '{}'
-ERROR_calver_minor_duplicate                      = Format defines two MINOR tokens: '{}'
-ERROR_calver_micro_minor                          = Format defines MINOR token after MICRO: '{}'
+ERROR_calver_month                                = Format definuje MM/0M token takze nemoze mat WW/0W token: '{}'
+ERROR_calver_week_month                           = Format definuje WW/0W token takze nemoze mat MM/0M token: '{}'
+ERROR_calver_week_day                             = Format definuje WW/0W token takze nemoze mat DD/0D token: '{}'
+ERROR_calver_micro_duplicate                      = Format definuje dva MICRO tokeny: '{}'
+ERROR_calver_minor_duplicate                      = Format definuje dva MINOR tokeny: '{}'
+ERROR_calver_micro_minor                          = Format definuje MINOR token az po MICRO: '{}'
 
 ERROR_command_hook_unexpected_error = Neocakavana chyba executing command hook
 ERROR_command_hook_parser_error     = Chyba pri parsovani command line: {}
 ERROR_unbalanced_quotes             = Unbalanced quotes in {}
-hooks.execution                     = Executing {} hook(s): {} in total
+hooks.execution                     = Spusta sa {} hook(ov): {} celkom
 
 announcers.header                = Announcing release
 announcers.not.enabled           = Announcing is not enabled. Skipping
@@ -72,8 +72,8 @@ announcers.not.configured        = No announcers have been configured. Skipping
 announcers.announcer.not.found   = Announcer {} not found. Skipping
 announcers.announcer.not.enabled = Announcer {} is not enabled. Skipping
 announcers.announcer.excluded    = Announcer {} was excluded. Skipping
-announcers.announcer.disabled    = nepodporovane. Preskakuje sa
-ERROR_unsupported_announcer      = Unsupported announcer {}
+announcers.announcer.disabled    = nepodporovane. Skippuje sa
+ERROR_unsupported_announcer      = Nepodporovany announcer {}
 ERROR_announcer_not_configured   = Announcer {} has not been configured
 
 assemblers.not.enabled                     = Assembling is not enabled. Skipping
@@ -124,7 +124,7 @@ ERROR_unsupported_packager                 = Unsupported packager {}
 ERROR_releaser_no_match = No suitable git releaser has been configured
 
 signing.header                       = Signing suborov
-signing.not.enabled                  = Signing nieje povoleny. Preskakuje sa
+signing.not.enabled                  = Signing nieje povoleny. Skippuje sa
 signing.no.match                     = No files configured for signing. Skipping
 signing.up.to.date                   = All signatures are up-to-date and valid. Skipping
 signing.verify.signatures            = verifying {} signatures
@@ -139,7 +139,7 @@ ERROR_unexpected_error_signing       = Unexpected error when signing
 ERROR_public_key_not_found           = Did not find public key for signing
 ERROR_password_incorrect             = Password does not match
 
-uploaders.not.enabled               = Uploading is not enabled. Skipping
+uploaders.not.enabled               = Uploading nie je povoleny. Skippuje sa
 uploaders.no.match                  = No uploaders match {}
 uploaders.uploader.not.configured   = Uploader {}/{} is not configured
 uploaders.uploader.not.configured2  = Uploader {} is not configured
@@ -153,7 +153,7 @@ uploaders.uploader.excluded         = Uploader {}:{} was excluded. Skipping
 uploaders.uploader.disabled         = Uploader {}:{} is not enabled. Skipping
 ERROR_unsupported_uploader          = Unsupported uploader {}
 
-downloaders.not.enabled                 = Stahovanie nie je povolene. Preskakuje sa
+downloaders.not.enabled                 = Stahovanie nie je povolene. Skippuje sa
 downloaders.no.match                    = No downloaders match {}
 downloaders.downloader.not.configured   = Downloader {}/{} is not configured
 downloaders.downloader.not.configured2  = Downloader {} is not configured
@@ -185,8 +185,8 @@ packager.write.file                     = writing file {} for {}/{}
 packager.copy.license                   = kopiruju sa license subory
 
 ERROR_brew_multiplatform_artifacts       = There are no matching multi-platform binaries
-ERROR_packager_requires_platform         = must run on {}
-ERROR_packager_excludes_platform         = must not run on {}
+ERROR_packager_requires_platform         = musi bezat na {}
+ERROR_packager_excludes_platform         = nemoze bezat na {}
 ERROR_chocolatey_nuget_not_found         = Did not find *.nupkg at {}
 dryrun.set                               = dry-run is set to true. Skipping
 docker.no.registries                     = no configured registries. Skipping
