chore: more translations

--- a/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
+++ b/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
@@ -61,46 +61,46 @@ ERROR_calver_micro_duplicate                      = Format definuje dva MICRO to
 ERROR_calver_minor_duplicate                      = Format definuje dva MINOR tokeny: '{}'
 ERROR_calver_micro_minor                          = Format definuje MINOR token az po MICRO: '{}'
 
-ERROR_command_hook_unexpected_error = Neocakavana chyba executing command hook
-ERROR_command_hook_parser_error     = Chyba pri parsovani command line: {}
-ERROR_unbalanced_quotes             = Unbalanced quotes in {}
+ERROR_command_hook_unexpected_error = Neocakavana chyba pri spustani command hook
+ERROR_command_hook_parser_error     = Chyba pri parsovani z command line: {}
+ERROR_unbalanced_quotes             = Nevyvazene uvodzovky v {}
 hooks.execution                     = Spusta sa {} hook(ov): {} celkom
 
-announcers.header                = Announcing release
-announcers.not.enabled           = Announcing is not enabled. Skipping
-announcers.not.configured        = No announcers have been configured. Skipping
-announcers.announcer.not.found   = Announcer {} not found. Skipping
-announcers.announcer.not.enabled = Announcer {} is not enabled. Skipping
-announcers.announcer.excluded    = Announcer {} was excluded. Skipping
+announcers.header                = Announcuje sa release
+announcers.not.enabled           = Announcing nieje povoleny. Skippuje sa
+announcers.not.configured        = Ziadny announcer nebol nakonfigurovany. Skippuje sa 
+announcers.announcer.not.found   = Announcer {} nebol najdeny. Skippuje sa
+announcers.announcer.not.enabled = Announcer {} nie je povoleny. Skippuje sa
+announcers.announcer.excluded    = Announcer {} bol excludovany. Skippuje sa 
 announcers.announcer.disabled    = nepodporovane. Skippuje sa
 ERROR_unsupported_announcer      = Nepodporovany announcer {}
-ERROR_announcer_not_configured   = Announcer {} has not been configured
+ERROR_announcer_not_configured   = Announcer {} nebol nakonfigurovany
 
-assemblers.not.enabled                     = Assembling is not enabled. Skipping
-assemblers.no.match                        = No assemblers match {}
-assemblers.distribution.not.configured     = Distribution {} is not configured for assembling with {}
+assemblers.not.enabled                     = Assemblovanie nie je povolene. Skippuje sa
+assemblers.no.match                        = Ziadny assembler sa nezhoduje {}
+assemblers.distribution.not.configured     = Distribution {} nie je nakonfigurovany na assembling s {}
 assemblers.assemble.distribution.with      = Assembling {} distribution with {}
 assemblers.assemble.distribution.with.all  = Assembling {} distribution with all assemblers
 assemblers.assemble.all.distributions.with = Assembling all distributions with {}
 assemblers.assemble.all.distributions      = Assembling all distributions
 assemblers.distribution.skip               = skipping for {} distribution
 assemblers.distribution.assemble           = assembling {} distribution
-assemblers.assembler.excluded              = Assembler {}:{} was excluded. Skipping
-ERROR_unsupported_assembler                = Unsupported assembler {}
+assemblers.assembler.excluded              = Assembler {}:{} was excluded. Skippuje sa
+ERROR_unsupported_assembler                = Nepodporovany assembler {}
 
 ERROR_unexpected_error_changelog = Neocakavana chyba pri vytvarani changelogu
 ERROR_cannot_read_changelog      = Nemozno citat changelog z {}
 
-checksum.header                           = Calculating checksums
-checksum.not.enabled                      = No files configured for checksum. Skipping
-checksum.not.changed                      = All checksums are up-to-date. Skipping
-checksum.not.exist                        = checksum does not exist: {}
-checksum.file.newer                       = {} is newer than {}
+checksum.header                           = Kalkuluju sa checksums
+checksum.not.enabled                      = No files configured for checksum. Skippuje sa
+checksum.not.changed                      = Vsetky checksums su aktualne. Skippuje sa
+checksum.not.exist                        = checksum neexistuje: {}
+checksum.file.newer                       = {} je novsi ako {}
 checksum.reading                          = reading {}
-ERROR_unexpected_error_checksum           = Unexpected error writing checksums to {}
-ERROR_artifact_does_not_exist             = Artifact does not exist. {}
-ERROR_unexpected_error_hash_read          = Unexpected error when reading hash from {}
-ERROR_unexpected_error_calculate_checksum = Unexpected error calculating checksum for {}
+ERROR_unexpected_error_checksum           = Neocakavana chyba pri zapisovani checksums do {}
+ERROR_artifact_does_not_exist             = Artifact neexistuje. {}
+ERROR_unexpected_error_hash_read          = Neocakavana chyba pri citani hash z {}
+ERROR_unexpected_error_calculate_checksum = Neocakavana chyba pri kalkulovani checksum pre {}
 
 packagers.packager.excluded                = packager {} was excluded. Skipping
 distributions.distribution.excluded        = distribution {} was excluded. Skipping
@@ -119,30 +119,30 @@ distributions.action.publishing            = publishing
 distributions.apply.action.distribution    = {} {} distribution
 distributions.failure                      = failure: {}
 distributions.previous.failure             = skipping due to previous failure
-ERROR_unsupported_packager                 = Unsupported packager {}
+ERROR_unsupported_packager                 = Nepodporovany packager {}
 
 ERROR_releaser_no_match = No suitable git releaser has been configured
 
 signing.header                       = Signing suborov
 signing.not.enabled                  = Signing nieje povoleny. Skippuje sa
-signing.no.match                     = No files configured for signing. Skipping
-signing.up.to.date                   = All signatures are up-to-date and valid. Skipping
-signing.verify.signatures            = verifying {} signatures
-signing.signing.files                = signing {} files into {}
-signing.signature.not.exist          = signature does not exist: {}
-signing.file.newer                   = {} is newer than {}
-ERROR_signing_verify_file            = Could not verify file {} with signature {}
-ERROR_signing_verify_signature       = Error when verifying signature of {}
-ERROR_signing_create_signature_dir   = Could not create signatures directory
-ERROR_unexpected_error_signature_gen = Unexpected error when initializing signature generator
-ERROR_unexpected_error_signing       = Unexpected error when signing
-ERROR_public_key_not_found           = Did not find public key for signing
-ERROR_password_incorrect             = Password does not match
+signing.no.match                     = Ziadne subory neboli konfigurovane pre signing. Skippuje sa
+signing.up.to.date                   = Vsetky signatures su aktualne a validne. Skippuje sa
+signing.verify.signatures            = overuju sa {} signatures
+signing.signing.files                = signing {} suborov do {}
+signing.signature.not.exist          = signature neexistuje: {}
+signing.file.newer                   = {} je novsi ako {}
+ERROR_signing_verify_file            = Nemozno verifikovat subor {} so signature {}
+ERROR_signing_verify_signature       = Chyba pri verifikovani signature od {}
+ERROR_signing_create_signature_dir   = Nebolo mozne vytvorit signatures directory
+ERROR_unexpected_error_signature_gen = Neocakavana chyba pri inicializacii signature generatora
+ERROR_unexpected_error_signing       = Neocakavana chyba pocas signing
+ERROR_public_key_not_found           = Nenasiel sa public key pre signing
+ERROR_password_incorrect             = Hesla sa nezhoduju
 
 uploaders.not.enabled               = Uploading nie je povoleny. Skippuje sa
 uploaders.no.match                  = No uploaders match {}
-uploaders.uploader.not.configured   = Uploader {}/{} is not configured
-uploaders.uploader.not.configured2  = Uploader {} is not configured
+uploaders.uploader.not.configured   = Uploader {}/{} nie je nakonfigurovany
+uploaders.uploader.not.configured2  = Uploader {} nie je nakonfigurovany
 uploaders.upload.with               = Uploading with {}/{}
 uploaders.upload.all.artifacts.with = Uploading all artifacts with {}
 uploaders.upload.all.artifacts.to   = Uploading all artifacts to {}
@@ -207,7 +207,7 @@ tool.located                             = located {}
 tool.downloading                         = downloading {}
 tool.downloaded                          = downloaded {} successfully
 tool.unpacked                            = unpacked {}
-tool.not.found                           = {} not found
+tool.not.found                           = {} nenajdeny
 tool.download.error                      = {} could not be downloaded/copied
 
 tool_verify_error                          = Could not verify {} {}. Skipping
@@ -216,11 +216,11 @@ cosign.generated.keys.at                   = Generated cosign key pair at {}
 WARN_cosign_password_does_not_match        = cosign password does not match
 ERROR_unexpected_generate_key_pair         = Unexpected error generating key pair
 assembler.fill.assembler.properties        = filling assembler properties into props
-ERROR_unexpected_error_writing_file        = Unexpected error when writing to {}
-ERROR_command_execution_exit_value         = Command execution error. exitValue = {}
-assembler.jlink.jdk                        = jdk version is {} {}
-assembler.jlink.target                     = target version is {} {}
-ERROR_jlink_target_not_compatible          = Target JDK {} is not compatible with {}
+ERROR_unexpected_error_writing_file        = Neocakavana chyba pri zapisovani do {}
+ERROR_command_execution_exit_value         = Chyba vykonavania commandu. exitValue = {}
+assembler.jlink.jdk                        = jdk verzia je {} {}
+assembler.jlink.target                     = target verzia je {} {}
+ERROR_jlink_target_not_compatible          = Target JDK {} nie je kompatibilne s {}
 assembler.copy.jars                        = copying JARs to {}
 assembler.copy.files                       = copying files to {}
 ERROR_assembler_delete_archive             = Could not delete previous archive {}
